feat: migrate vertx 4 to 5
This PR migrates the codebase from Vert.x 4 to Vert.x 5, updating API usage across multiple verticles and utility classes to align with new Vert.x 5 patterns and removing deprecated internal APIs.

Latest Verion Used
Vertx used v 5.0.7
logback-classic - 1.5.19
commons-io:commons-io - 2.14.0
vertx-launcher-legacy-cli - 5.0.7
micrometer-registry-prometheus - 1.15.8
Vertx migration include below changes from 4 - 5
The Future implementation has been removed from PendingDeployment to support the migration from Vert.x 4 to Vert.x 5. The PendingDeployment class now returns objects directly, rather than Futures.
Handling deprecations and removals
Vert.x Legacy CLI
Changes accessing the cluster manager and metrics factory
CompositeFuture raw Future type removal
Recursive boolean in filesystem delete method removal
Removal of execute blocking methods with a handler of promise
Netty type usage removals
CORS regex origins
Vert.x SQL Client
Vert.x Micrometer Metrics